address reviews + keep up with java17 updates